New links and styling fixes

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -342,6 +342,7 @@ footer h3,
 .mdc-typography--headline3 {
   font-size: 2.1rem;
   line-height: 2.3rem;
+  margin-top: $unit*1.5 !important;
 }
 .mdc-typography--headline4 {
   font-size: 1.75rem;
@@ -978,6 +979,15 @@ a {
     }
   }
 }
+.back-to-results {
+  font-size: 0.9rem;
+}
+.back-to-results:hover {
+  text-decoration: none;
+  .underline {
+    text-decoration: underline;
+  }
+}
 .goodmoves-organisation-search .search-info {
   margin-bottom: $unit*1.5;
 }
@@ -1248,7 +1258,7 @@ a {
     box-shadow: 0px 3px 3px -2px rgba(0, 0, 0, 0.2), 0px 3px 4px 0px rgba(0, 0, 0, 0.14), 0px 1px 8px 0px rgba(0, 0, 0, 0.12);
   }
   .mdc-card__info--organisation-title {
-    margin: 0 0 $unit/2;
+    margin: 0 0 $unit/2 !important;
   }
   .mdc-card__info--vacancy .detailed-info,
   .organisation-type {
@@ -2472,7 +2482,7 @@ footer.mdc-layout__footer {
   background-color: $mdc-theme-footer;
   box-shadow: $toolbar-shadow-reverse;
   position: relative;
-  // z-index: 4;
+  z-index: 1;
   p, li, div {
     font-family: $footer-font-family;
     font-weight: $footer-font-weight;
