--- a/sites/configurations/goodmoves/templates/account/settings.hbs
+++ b/sites/configurations/goodmoves/templates/account/settings.hbs
@@ -25,7 +25,7 @@
   </h1>
 
   <section class="settings-section goodmoves-settings-email">
-    <h2 class="mdc-typography--headline5 v-margin-full">
+    <h2 class="mdc-typography--headline5">
       Email alerts
     </h2>
     <div class="mdc-layout-grid">
@@ -67,7 +67,7 @@
   <hr />
 
   <section class="settings-section goodmoves-settings-account">
-    <h2 class="mdc-typography--headline5 v-margin-full">
+    <h2 class="mdc-typography--headline5">
       Account
     </h2>
 
@@ -189,7 +189,7 @@
   data-mdc-auto-init="MDCDialog">
   <form action="/import-user-data" method="POST" class="mdc-dialog__surface" data-ajax-form='{
         "successMessage": "Data imported successfully",
-        "failureMessage": "Failed to import data"    
+        "failureMessage": "Failed to import data"
       }'>
     <header class="mdc-dialog__header">
       <h2 id="import-user-dialog-label" class="mdc-dialog__header__title">
