--- a/sites/configurations/getinvolved/layouts/default.hbs
+++ b/sites/configurations/getinvolved/layouts/default.hbs
@@ -46,10 +46,10 @@
 <body class="{{#if request.params.path}}{{replace request.params.path '_' ' '}}{{else}}home{{/if}}">
   <scvo-site>
     <div class="mdc-typography">
-      <header class="mdc-toolbar">
-        <div class="mdc-toolbar__row">
-          <div class="container-fluid">
-            <section class="mdc-toolbar__section">
+      <header class="mdc-top-app-bar mdc-elevation--z5 top-bar-stuck" id="top-bar">
+        <div class="container-fluid">
+          <div class="mdc-top-app-bar__row mdc-top-app-bar__upper">
+            <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
               <span class="mdc-toolbar__title catalog-title">
                 <a href="/" class="brand-logo" title="Get Involved!">
                   <img src="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/images/logos/get-involved.png" class="brand-logo-mobile" />
@@ -57,19 +57,24 @@
                 </a>
               </span>
             </section>
-            <section class="mdc-toolbar__section mdc-toolbar__section--align-end mdc-toolbar__section--shrink-to-fit hide-lg">
+            <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end mdc-top-app-bar__section--shrink-to-fit hide-lg">
               <button class="mdc-top-app-bar__navigation-icon" data-drawer-target="#mobile-menu">
                 <span class="far fa-fw fa-2x fa-bars"></span>
               </button>
+              {{#unless route.metaData.hideSearch}}
+              <button class="mdc-top-app-bar__navigation-icon hide-lg" data-drawer-target="#sidebar-temporary" title="Search">
+                <span class="far fa-fw fa-2x fa-search"></span>
+              </button>
+              {{/unless}}
             </section>
           </div>
-        </div>
-        <div class="mdc-toolbar__row navbar">
-          <div class="container-fluid">
-            <section class="mdc-toolbar__section">
+          <div class="mdc-top-app-bar__row mdc-top-app-bar__lower hide-sm hide-md">
+            <section class="mdc-top-app-bar__section mdc-top-app-bar__main">
               <nav id="main-tab-bar" class="mdc-tab-bar" [menu]="'main'" [menulinkselector]="''" [menulabelselector]="'span.mdc-tab--label'" [menuactiveclass]="'active'">
                 {{#each context.metaData.menus.main}}
-                <a class="mdc-tab{{#if (regexMatch ../request.url.pathname route "gi")}} mdc-tab--active{{/if}}" href="{{path}}"><span class="mdc-tab--label">{{{label}}}</span></a>
+                <a class="mdc-tab{{#if (regexMatch ../request.url.pathname route "gi")}} mdc-tab--active{{/if}}" href="{{path}}">
+                  <span class="mdc-tab--label">{{{label}}}</span>
+                </a>
                 {{/each}}
               </nav>
             </section>
@@ -97,7 +102,14 @@
         </nav>
       </aside>
 
-      <main>
+      <main class="mdc-theme--background mdc-toolbar-fixed-adjust {{#if layoutParts.sidebar}}drawer-container-permanent{{else}}drawer-container-temporary{{/if}}">
+        {{#if layoutParts.sidebar ~}}
+        <aside class="mdc-drawer mdc-drawer--temporary mdc-drawer--occasional mdc-elevation--z3" id="sidebar-temporary" data-mdc-auto-init="MDCTemporaryDrawer">
+          <div class="mdc-drawer__drawer">
+            {{{layoutParts.sidebar}}}
+          </div>
+        </aside>
+        {{/if}}
         <div class="container-fluid">
           {{{layoutParts.body}}}
         </div>
@@ -150,24 +162,33 @@
       </footer>
     </div>
   </scvo-site>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script type="text/javascript" src="/assets/js/headroom.min.js"></script>
   {{#if (contains request.url.host '.local')}}
   <script type="text/javascript" src="https://unpkg.com/material-components-web@0.37.1/dist/material-components-web.js"></script>
   {{else}}
   <script type="text/javascript" src="https://unpkg.com/material-components-web@0.37.1/dist/material-components-web.min.js"></script>
   {{/if}}
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"
+    integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
+    crossorigin=""></script>
+  <script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/Leaflet.fullscreen.min.js'></script>
+  <script src="https://cdn.jsdelivr.net/npm/promise-polyfill@7/dist/polyfill.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/string.js/3.3.3/string.min.js"></script>
   <script type="text/javascript">
   var $buoop = {required:{e:-3,f:-3,o:-3,s:-1,c:-3},insecure:true,unsupported:true,api:2018.07 };
   function $buo_f(){
-   var e = document.createElement("script");
-   e.src = "//browser-update.org/update.min.js";
-   document.body.appendChild(e);
+    var e = document.createElement("script");
+    e.src = "//browser-update.org/update.min.js";
+    document.body.appendChild(e);
   };
   try {document.addEventListener("DOMContentLoaded", $buo_f,false)}
   catch(e){window.attachEvent("onload", $buo_f)}
   </script>
   <script type="text/javascript" id="cookieinfo" src="/assets/js/cookieinfo.min.js" data-message="We use cookies to track anonymous usage statistics and do not collect any personal information that can be used to identify you. By continuing to visit this site you agree to our use of cookies." data-font-family="'Open Sans',Helvetica,Arial,sans-serif" data-bg="#fff" data-link="#c2185b" data-divlink="#fff" data-divlinkbg="#c2185b" data-position="bottom" data-accept-on-scroll="true" data-moreinfo="/cookies" data-cookie="CookieInfoScript" data-text-align="left"></script>
   <script type="text/javascript" src="/assets/js/getinvolved/root.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBJdxcQpVKQ6HdrjnPXycUoZqsmp-Ep3l0&libraries=places&region=uk&callback=initMap" async defer></script>
+
   {{{layoutParts.foot}}}
 </body>
 </html>
