--- a/sites/configurations/goodmoves/templates/vacancies/home.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/home.hbs
@@ -19,10 +19,6 @@
       </div>
       <div class="search-content">
         <form id="search-view" class="search-form mdc-elevation--z5" action="/search" method="GET">
-          <!-- <input type="hidden" data-location-inner-ne="where-jobs" name="inner-ne" value="{{@root.request.params.query.inner-ne}}" id="location-inner-ne">
-          <input type="hidden" data-location-inner-sw="where-jobs" name="inner-sw" value="{{@root.request.params.query.inner-sw}}" id="location-inner-sw">
-          <input type="hidden" data-location-outer-ne="where-jobs" name="outer-ne" value="{{@root.request.params.query.outer-ne}}" id="location-outer-ne">
-          <input type="hidden" data-location-outer-sw="where-jobs" name="outer-sw" value="{{@root.request.params.query.outer-sw}}" id="location-outer-sw"> -->
           <input type="hidden" name="lat" value="{{@root.request.params.query.lat}}" id="location-lat">
           <input type="hidden" name="lng" value="{{@root.request.params.query.lng}}" id="location-lng">
           <div class="mdc-layout-grid">
@@ -30,7 +26,82 @@
               <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
                 <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon mdc-text-field-tt" data-mdc-auto-init="MDCTextField">
                   <span class="far fa-search mdc-text-field__icon" tabindex="0" role="button"></span>
-                  <input type="text" id="what-jobs" name="keywords" class="mdc-text-field__input" placeholder="" data-lpignore="true">
+                  <input type="text" id="what-jobs" name="keywords" class="mdc-text-field__input" placeholder="" data-lpignore="true" data-typeahead='{
+                    "typeaheadOptions": {
+                      "highlight": true,
+                      "minlength": 0        
+                    },
+                    "outputs": [
+                      {
+                        "type": "element",
+                        "options": {
+                          "containerSelectorTemplate": "#search-terms", 
+                          "testSelectorTemplate": "#\{{dataset.name}}-\{{item.value}}",
+                          "removeSelectorTemplate": "#remove-\{{dataset.name}}-\{{item.value}}",
+                          "template": {{#blockStringify this~}}
+                            <div class="mdc-chip mdc-theme--primary-bg" tabindex="0" id="\{{dataset.name}}-\{{item.value}}">
+                              <div class="mdc-chip__text">\{{item.label}}</div>
+                              <input type="hidden" name="\{{dataset.name}}[]" value="\{{item.value}}">
+                              <i class="far fa-times-circle mdc-chip__icon mdc-chip__icon--trailing" tabindex="0" role="button" id="remove-\{{dataset.name}}-\{{item.value}}"></i>
+                            </div>
+                          {{~/blockStringify}}
+                        }
+                      },
+                      {
+                        "type": "prop",
+                        "options": {
+                          "selectorTemplate": "[name=\"\{{value}}\"]"
+                        }
+                      }
+                    ],
+                    "datasets": [
+                      {
+                        "name": "sectors",
+                        "templates": {
+                          "header": "<h3>Sectors</h3>"
+                        },
+                        "display": "label",
+                        "items": [
+                          {{#each @root.data.supplimentaryResponses.types.aggregations.sectors.buckets ~}}
+                          {
+                            "label": {{{stringify key}}},
+                            "value": {{{stringify (slugify key)}}}
+                          }{{#unless @last}},{{/unless}}
+                          {{/each ~}}
+                        ]
+                      },
+                      {
+                        "name": "roles",
+                        "templates": {
+                          "header": "<h3>Roles</h3>"
+                        },
+                        "display": "label",
+                        "items": [
+                          {{#each @root.data.supplimentaryResponses.types.aggregations.roles.buckets ~}}
+                          {
+                            "label": {{{stringify key}}},
+                            "value": {{{stringify (slugify key)}}}
+                          }{{#unless @last}},{{/unless}}
+                          {{/each ~}}
+                        ]
+                      },
+                      {
+                        "name": "role_status",
+                        "templates": {
+                          "header": "<h3>Working pattern</h3>"
+                        },
+                        "display": "label",
+                        "items": [
+                          {{#each @root.data.supplimentaryResponses.types.aggregations.role_status.buckets ~}}
+                          {
+                            "label": {{{stringify key}}},
+                            "value": {{{stringify (slugify key)}}}
+                          }{{#unless @last}},{{/unless}}
+                          {{/each ~}}
+                        ]
+                      }
+                    ]  
+                  }'>
                   <label for="what-jobs" class="mdc-floating-label">
                     Keywords
                   </label>
