Moved location stuff to assets project

--- a/sites/configurations/goodmoves/layouts/default.hbs
+++ b/sites/configurations/goodmoves/layouts/default.hbs
@@ -464,7 +464,7 @@ if(location.host.indexOf('.local') > -1){
 
     function initMap() {
       registerReadyListener(function() {
-        goodmoves.handleLocationBoxes();
+        goodmoves.componentsInitialiser.initialiseGMapsDependents();
       });
     }
   </script>
