--- a/sites/configurations/goodmoves/templates/vacancies/home.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/home.hbs
@@ -111,13 +111,17 @@
               <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
                 <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
                   <span class="far fa-map-marker-alt mdc-text-field__icon geo-lookup" tabindex="0" title="Find my location"></span>
-                  <input type="text" id="where-jobs" name="location" class="mdc-text-field__input" value="{{@root.request.params.query.location}}" placeholder="" data-lpignore="true" data-location-options='
-                    {
-                      "types": ["(regions)"],
+                  <input type="text" id="where-jobs" name="location" class="mdc-text-field__input" value="{{@root.request.params.query.location}}" placeholder="" data-lpignore="true" data-location-search='{
+                    "googleMapsOptions": {
+                      "type": ["(regions)"],
                       "componentRestrictions": {
                         "country": "gb"
                       }
-                    }' data-location-lat="[name='lat']" data-location-lng="[name='lng']" data-location-services=".geo-lookup">
+                    },
+                    "latSelector": "[name=\"lat\"]",
+                    "lngSelector": "[name=\"lng\"]",
+                    "locationServicesSelector": ".geo-lookup"
+                  }'>
                   <label for="where-jobs" class="mdc-floating-label">
                     Location
                   </label>
