Updated call to gmaps components to pass in api key

--- a/sites/configurations/goodmoves/layouts/default.hbs
+++ b/sites/configurations/goodmoves/layouts/default.hbs
@@ -464,7 +464,7 @@ if(location.host.indexOf('.local') > -1){
 
     function initMap() {
       registerReadyListener(function() {
-        goodmoves.componentsInitialiser.initialiseGMapsDependents();
+        goodmoves.componentsInitialiser.initialiseGMapsDependents('AIzaSyCT7vZkJdto5JoAUDx3asuHu7mHcl8UanQ');
       });
     }
   </script>
